RJCP.Text: Add new module, implementing sprintf()
Issue: DOTNET-247

--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,8 @@
 	url = ../RJCP.DLL.VolumeDeviceInfo.git
 	branch = master
 	ignore = untracked
+[submodule "framework/textutils"]
+	path = framework/textutils
+	url = ../RJCP.DLL.Text
+	branch = master
+	ignore = untracked
