--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-*~
-/distribute
-/Tools
-/packages
-/.vs
-/installer/.vs
-/CrashDumps
-/rjcp.rjlog.html
-/rjcp.rjlog
+/.vs/
+/packages/
 /Help
-/obj
+bin/
+obj/
+*~
+*.user
+*.userprefs
+*.suo
