VSCode: Add support for building from Linux
The extension Test Explorer was added, but it won't work unless the settings is modified to specify a .csproj file explicitly. This is because there are multiple solution files in the same directory.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "omnisharp.enableEditorConfigSupport": true
+    "omnisharp.enableEditorConfigSupport": true,
+    "dotnet-test-explorer.testProjectPath": "RJCP.Framework.sln"
 }
