Trace: Add the LogSource from the RJCP.DLL.Trace repository
Issue: DOTNET-362

--- a/.gitmodules
+++ b/.gitmodules
@@ -23,6 +23,11 @@
 	url = ../RJCP.DLL.Text.git
 	branch = master
 	ignore = untracked
+[submodule "framework/trace"]
+	path = framework/trace
+	url = ../RJCP.DLL.Trace.git
+	branch = master
+	ignore = untracked
 [submodule "framework/volumedevinfo"]
 	path = framework/volumedevinfo
 	url = ../RJCP.DLL.VolumeDeviceInfo.git
