MSBuildTasks: Allow package creation with dotnet pack
We no longer require downloading and using the nuget.exe tool to create the nuget package, as the project file is modified to provide the nuspec file explicitly.

Issue: DOTNET-376

--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
@@ -30,6 +30,7 @@
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug'">
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Release'">
@@ -37,6 +38,8 @@
     <Optimize>true</Optimize>
     <X509SigningCert>signcert.crt</X509SigningCert>
     <X509TimeStampUri>http://timestamp.digicert.com</X509TimeStampUri>
+    <NuSpecFile>RJCP.MSBuildTasks.nuspec</NuSpecFile>
+    <NuSpecProperties>id=$(AssemblyTitle);version=$(Version);authors=$(Authors);description=$(Description)</NuSpecProperties>
   </PropertyGroup>
 
   <ItemGroup>
