--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>RJCP.MSBuildTasks</id>
-    <version>0.1.0</version>
-    <authors>Jason Curl</authors>
-    <description>MSBuild Tasks for RJCP Framework Libraries.</description>
+    <id>$id$</id>
+    <version>$version$</version>
+    <authors>$authors$</authors>
+    <description>$description$</description>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/jcurl</projectUrl>
     <dependencies>
