MSBuildTasks: Add infrastructure to get GIT info
Provide classes and a framework to get source control information. This first implementation only supports GIT. This will be used later by a new MSBuild task to be part of the build system.

The RevisionControl task is intended to get important revision control information from the current path. A project can use this information to update metadata for the binaries it builds.

Detailed documentation and design information provided in `docs/design/revision.md`.

Issue: DOTNET-375

--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
@@ -44,6 +44,7 @@
 
   <ItemGroup>
     <Compile Include="Infrastructure\IO\AsyncResult.cs" />
+    <Compile Include="Infrastructure\Platform.cs" />
     <Compile Include="Infrastructure\Process\ConsoleDataEventArgs.cs" />
     <Compile Include="Infrastructure\Process\Executable.cs" />
     <Compile Include="Infrastructure\Process\Internal\IProcessWorker.cs" />
@@ -51,9 +52,18 @@
     <Compile Include="Infrastructure\Process\Internal\ProcessWorker.cs" />
     <Compile Include="Infrastructure\Process\ProcessExitedEventArgs.cs" />
     <Compile Include="Infrastructure\Process\RunProcess.cs" />
+    <Compile Include="Infrastructure\SourceProvider\GitProvider.cs" />
+    <Compile Include="Infrastructure\SourceProvider\GitSourceFactory.cs" />
+    <Compile Include="Infrastructure\SourceProvider\ISourceControl.cs" />
+    <Compile Include="Infrastructure\SourceProvider\ISourceFactory.cs" />
+    <Compile Include="Infrastructure\SourceProvider\SourceFactory.cs" />
+    <Compile Include="Infrastructure\SourceProvider\SourceProviderException.cs" />
+    <Compile Include="Infrastructure\SourceProvider\UnknownSourceProviderException.cs" />
+    <Compile Include="Infrastructure\Threading\Tasks\AsyncCache.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncManualResetEvent.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncValue.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncSemaphore.cs" />
+    <Compile Include="Infrastructure\Tools\GitTool.cs" />
     <Compile Include="Infrastructure\Tools\IToolFactory.cs" />
     <Compile Include="Infrastructure\Tools\SignTool.cs" />
     <Compile Include="Infrastructure\Tools\ToolFactory.cs" />
