--- a/msbuild/buildtasks/buildtaskstest/RJCP.MSBuildTasksTest.csproj
+++ b/msbuild/buildtasks/buildtaskstest/RJCP.MSBuildTasksTest.csproj
@@ -52,12 +52,16 @@
     <Compile Include="Infrastructure\Process\GetDirSimProcess.cs" />
     <Compile Include="Infrastructure\Process\RunProcessCmdLineWinTest.cs" />
     <Compile Include="Infrastructure\Process\RunProcessTest.cs" />
-    <Compile Include="Infrastructure\Tools\SignToolSimProcess.cs" />
     <Compile Include="Infrastructure\Process\TimeoutSimProcess.cs" />
+    <Compile Include="Infrastructure\SourceProvider\GitProviderTest.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncManualResetEventTest.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncSemaphoreTest.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncValueTest.cs" />
+    <Compile Include="Infrastructure\Tools\GitSimProcess+GitResults.cs" />
+    <Compile Include="Infrastructure\Tools\GitSimProcess.cs" />
+    <Compile Include="Infrastructure\Tools\GitToolMock.cs" />
     <Compile Include="Infrastructure\Tools\SignToolMock.cs" />
+    <Compile Include="Infrastructure\Tools\SignToolSimProcess.cs" />
     <Compile Include="Infrastructure\Tools\TestToolsFactory.cs" />
     <Compile Include="Infrastructure\Tools\ToolCreatedEventArgs.cs" />
     <Compile Include="X509SignAuthenticodeTest.cs" />
