MSBuildTasks: Add SemVer2 Logic
The SemVer2 logic will be required for taking a customer version and splitting it up into its constituents, so it can be reconstructed.

Issue: DOTNET-375

--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Infrastructure\Process\Internal\ProcessWorker.cs" />
     <Compile Include="Infrastructure\Process\ProcessExitedEventArgs.cs" />
     <Compile Include="Infrastructure\Process\RunProcess.cs" />
+    <Compile Include="Infrastructure\SemVer2.cs" />
+    <Compile Include="Infrastructure\SemVerHelper.cs" />
     <Compile Include="Infrastructure\SourceProvider\GitProvider.cs" />
     <Compile Include="Infrastructure\SourceProvider\GitSourceFactory.cs" />
     <Compile Include="Infrastructure\SourceProvider\ISourceControl.cs" />
