--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
@@ -17,6 +17,11 @@
     <file src="package\lib\_._" target="lib\net40\" />
     <file src="package\build\RJCP.MSBuildTasks.props" target="build\" />
     <file src="package\build\RJCP.MSBuildTasks.targets" target="build\" />
-    <file src="bin\Release\netstandard2.1\RJCP.MSBuildTasks.dll" target="build\" />
+    <file src="package\build\RJCP.MSBuildTasks.props" target="buildMultiTargeting\" />
+    <file src="package\build\RJCP.MSBuildTasks.targets" target="buildMultiTargeting\" />
+    <file src="package\tools\RJCP.MSBuildTasks.props" target="tools\" />
+    <file src="package\tools\RJCP.MSBuildTasks.targets" target="tools\" />
+    <file src="bin\Release\net48\RJCP.MSBuildTasks.dll" target="tools\net48\" />
+    <file src="bin\Release\netstandard2.1\RJCP.MSBuildTasks.dll" target="tools\netstandard2.1\" />
   </files>
 </package>
