--- a/msbuild/buildtasks/buildtaskstest/RJCP.MSBuildTasksTest.csproj
+++ b/msbuild/buildtasks/buildtaskstest/RJCP.MSBuildTasksTest.csproj
@@ -3,7 +3,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>net48;netcoreapp3.1</TargetFrameworks>
     <OutputType>Library</OutputType>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release</Configurations>
@@ -45,15 +45,20 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
     <ProjectReference Include="..\buildtasks\RJCP.MSBuildTasks.csproj" />
     <ProjectReference Include="..\..\..\framework\nunitextensions\CodeQuality\RJCP.CodeQuality.csproj" />
+
+    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.10.0" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.10.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Include="BuildEngineMock.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Infrastructure\Process\GetDirSimProcess.cs" />
     <Compile Include="Infrastructure\Process\RunProcessCmdLineWinTest.cs" />
     <Compile Include="Infrastructure\Process\RunProcessTest.cs" />
     <Compile Include="Infrastructure\Process\TimeoutSimProcess.cs" />
     <Compile Include="Infrastructure\SemVer2Test.cs" />
+    <Compile Include="Infrastructure\SourceProvider\GitProviderRepo.cs" />
     <Compile Include="Infrastructure\SourceProvider\GitProviderTest.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncManualResetEventTest.cs" />
     <Compile Include="Infrastructure\Threading\Tasks\AsyncSemaphoreTest.cs" />
