MSBuildTasks: Define NuSpec file as a Developer Dependency
By specifying as a developer dependency, NuGet packages built by projects should not automatically mark usage of this NuGet package as a dependency.

Issue: DOTNET-389

--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.nuspec
@@ -7,6 +7,7 @@
     <description>$description$</description>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/jcurl</projectUrl>
+    <developmentDependency>true</developmentDependency>
     <dependencies>
       <group targetFramework=".NETStandard1.0" />
       <group targetFramework=".NETFramework4.0" />
