--- a/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
+++ b/msbuild/buildtasks/buildtasks/RJCP.MSBuildTasks.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Infrastructure\Process\Internal\ProcessWorker.cs" />
     <Compile Include="Infrastructure\Process\ProcessExitedEventArgs.cs" />
     <Compile Include="Infrastructure\Process\RunProcess.cs" />
+    <Compile Include="Infrastructure\Process\RunProcessException.cs" />
     <Compile Include="Infrastructure\SemVer2.cs" />
     <Compile Include="Infrastructure\SemVerHelper.cs" />
     <Compile Include="Infrastructure\SourceProvider\GitProvider.cs" />
