MSBuildTasks: Set the SourceRevisionId to be -dirty if needed
Prior to this commit, the RevisionControlDirty only controlled if we could make a release version or not. That couldn't be distinguished between the revision control file system being dirty, or if it is checked in but changed since the last label, or just built in Debug mode.

Now if the revision control system is dirty, the keyword '-dirty' is appended to the SourceRevisionId

Issue: DOTNET-394

--- a/msbuild/buildtasks/buildtasks/package/tools/RJCP.MSBuildTasks.targets
+++ b/msbuild/buildtasks/buildtasks/package/tools/RJCP.MSBuildTasks.targets
@@ -62,8 +62,12 @@
       <Output TaskParameter="RevisionControlUser" PropertyName="RevisionControlUser" />
     </RevisionControl>
 
+    <PropertyGroup Condition="'$(SourceRevisionId)' == '' and '$(RevisionControlType)' == 'git'">
+      <SourceRevisionId Condition="'$(RevisionControlDirty)' != 'true'">g$(RevisionControlCommitShort)</SourceRevisionId>
+      <SourceRevisionId Condition="'$(RevisionControlDirty)' == 'true'">g$(RevisionControlCommitShort)-dirty</SourceRevisionId>
+    </PropertyGroup>
+
     <PropertyGroup>
-      <SourceRevisionId Condition="'$(SourceRevisionId)' == ''">g$(RevisionControlCommitShort)</SourceRevisionId>
       <_RJCP_ReleaseBuild Condition="'$(Configuration)' == 'Release' and '$(RevisionControlDirty)' != 'true' and '$(RevisionControlTagged)' == 'true'">True</_RJCP_ReleaseBuild>
     </PropertyGroup>
 
